<resources>
    <string name="app_name">My Application</string>
    <string name="intro">Καλως ήρθατε στο Πρόγραμμα Μεταπτυχιακών Σπουδών στην «Πληροφορική»</string>
    <string name="text_btn1">Συνοπτική παρουσίαση</string>
    <string name="text_btn2">Σκοπός</string>
    <string name="text_btn3">Δομή και Μαθήματα</string>
    <string name="text_btn4">Αίστηση για Εγγραφή</string>
    <string name="text_form1_1">Συνοπτική Παρουσίαση του ΠΜΣ "Πληροφορική"</string>
    <string name="text_form1_2">Το Πρόγραμμα Μεταπτυχιακών Σπουδών στην «Πληροφορική» έχει ως αντικείμενο την άρτια και υψηλού επιπέδου εκπαίδευση αποφοίτων τμημάτων ΑΕΙ και ΑΤΕΙ διαφόρων επιστημονικών ειδικοτήτων στις αρχές και μεθοδολογίες εφαρμογής της σύγχρονης επιστήμης της Πληροφορικής,</string>
    <string name="text_form1_3">Το Πρόγραμμα Μεταπτυχιακών Σπουδών στην «Πληροφορική» θεραπεύει σύγχρονα ζητήματα τεχνολογίας και εφαρμογών της επιστήμης της Πληροφορικής σε άλλες σύγχρονες επιστήμες. Το περιεχόμενο και η φυσιογνωμία του προγράμματος έχει διαμορφωθεί έτσι ώστε να ανταποκρίνεται με επιτυχία στις ιδιαίτερες επιστημονικές ανάγκες που προκαλεί η  ταχύτατη εξέλιξη της Πληροφορικής και των εφαρμογών της σε ευρωπαϊκό και διεθνές επίπεδο.</string>
    <string name="text_btnF1">Πίσω στην Αρχική</string>
    <string name="text_form2_1">Η ενδυνάμωση του διεπιστημονικού χαρακτήρα της Πληροφορικής και η σύνδεσή της με άλλες επιστήμες με στόχο τόσο την ανάπτυξη υψηλού επιπέδου γνώσεων Πληροφορικής σε επιστήμονες άλλων ειδικοτήτων, όσο και η τροφοδότηση της ίδιας της Πληροφορικής με νέα επιστημονικά πεδία βασικής έρευνας και ανάπτυξης εφαρμογών.</string>
    <string name="text_form2_2">Η προετοιμασία και εκπαίδευση καταρτισμένων και ικανών επιστημόνων και ερευνητών που θα προωθήσουν την ανάπτυξη της χώρας.</string>
    <string name="text_form2_3">Η προετοιμασία για μεταπτυχιακές σπουδές διδακτορικού επιπέδου.</string>
    <string name="text_form2_4">Η ανάπτυξη και διάχυση της Εφαρμοσμένης Πληροφορικής στον Ελλαδικό χώρο.</string>
    <string name="text_form2_5">Η στενή συνεργασία μεταξύ της Ακαδημαϊκής Κοινότητας και των Επιχειρήσεων για την αποδοχή, χρήση και διάδοση των συστημάτων Πληροφορικής.</string>
    <string name="text_form2_6">Η συνεργασία με Ελληνικούς, Ευρωπαϊκούς και Διεθνείς Επιστημονικούς Οργανισμούς, που ασχολούνται με θέματα Πληροφορικής.</string>
    <string name="text_form3_1">Τα μαθήματα ΠΜΣ έχουν επιλεγεί προσεκτικά ώστε να παρέχουν μια πλήρη βασική γνώση της επιστήμης της πληροφορικής σε κάθε υποψήφιο.Κάθε µάθηµα διδάσκεται σε 30 ώρες και ισοδυναµεί µε τρεις (3) διδακτικές µονάδες. Η Μεταπτυχιακή διατριβή ισοδυναµεί µε είκοσι (20) διδακτικές µονάδες.</string>
    <string name="text_form3_2"><b>1ου εξαμήνου:</b>Εισαγωγή στην Επιστήµη των Υπολογιστών,Aρχές Προγραµµατισµού – Γλώσσα C,Ειδικά Κεφάλαια Μαθηµατικών,Λειτουργικά Συστήματα,∆οµές ∆εδοµένων,Γλώσσες Προγραµµατισµού και Μεταγλωττιστές</string>
    <string name="text_form3_3"><b>2ου εξαμήνου:</b>Αντικειµενοστρεφής Προγραµµατισµός – Τεχνολογίες ∆ιαδικτύου,Θεωρία και Εφαρµογές Γραφηµάτων,Βάσεις και Αποθήκες ∆εδοµένων,Τεχνητή Νοηµοσύνη – Έµπειρα Συστήµατα,Αλληλεπίδραση Ανθρώπου - Υπολογιστή,Ταχεία Ανάπτυξη Εφαρμογών</string>
    <string name="text_form3_4"><b>3ου εξαμήνου:</b>Τεχνολογία Λογισµικού,Αναγνώριση Προτύπων,Αλγόριθµοι,Ανάπτυξη Λογισμικού για Κινητές Συσκευές,∆ίκτυα Υπολογιστών,Συστήματα Λογισμικού Διαχείρισης Επιχειρησιακών Πόρων (ERP)</string>
    <string name="text_form3_5"><b>4ου εξαμήνου:</b>Μεταπτυχιακή Διπλωματική Εργασία και δύο μαθήματα επιλογής.</string>
    <string name="text_form4_1">Οι ενδιαφερόμενοι μπορούν να υποβάλουν αίτηση έως και 20 Οκτωβρίου 2022 ηλεκτρονικά στον διαδικτυακό τόπο: http://www.cs.unipi.gr/registration/request1.php και να αποστείλουν την αίτηση και τα κάτωθι δικαιολογητικά αναγράφοντας το ονοματεπώνυμο τους στο email infodept@unipi.gr. Οι αιτήσεις γίνονται δεκτές και ταχυδρομικώς εφόσον αποσταλούν προς το Τμήμα Πληροφορικής του Πανεπιστημίου Πειραιώς, μέχρι την καταληκτική ημερομηνία.</string>
    <string name="text_form4_2"><b>Κριτήρια επιλογής για την αξιολόγηση και κατάταξη υποψηφίων του ΠΜΣ «Πληροφορική»</b></string>
    <string name="text_form4_3">Η επιλογή των εισακτέων πραγματοποιείται από Επιτροπή μελών ΔΕΠ (Επιτροπή Επιλογής), που συγκροτείται με απόφαση της Συνέλευσης. Τα κριτήρια επιλογής καθώς και οι λεπτομέρειες εφαρμογής των κριτηρίων αυτών (όπως μόρια, συντελεστές) γίνονται γνωστά στους υποψηφίους με την προκήρυξη του ΠΜΣ και είναι τα ακόλουθα:<br>1. Βαθμός πτυχίου (20%)</br>2. Συνάφεια του Τμήματος προέλευσης με το ΠΜΣ (20%)3. Είδος και εύρος εργασιακής ή/και ερευνητικής εμπειρίας (20%)4. Συστατικές επιστολές από μέλη ∆ΕΠ ΑΕΙ ή / και από εργοδότη (5%)5. Γνώση Αγγλικής γλώσσας (5%)6. Συνέντευξη (30%)</string>


</resources>