<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout
        android:id="@+id/Lt5"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="#0C4270"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/unipi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lt6"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_alignParentBottom="true"
        android:background="#0C4270"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/BtnF2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0C4270"
            android:onClick="GoBack3"
            android:text="@string/text_btnF1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_ViewF2_1"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="@string/text_btn2"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/Lt6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lt5"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/f2_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_form2_1"
        app:layout_constraintTop_toBottomOf="@+id/text_ViewF2_1"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf2_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_form2_2"
        app:layout_constraintTop_toBottomOf="@+id/f2_3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf2_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_form2_3"
        app:layout_constraintTop_toBottomOf="@+id/textViewf2_4"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf2_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_form2_4"
        app:layout_constraintTop_toBottomOf="@+id/textViewf2_5"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf2_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_form2_5"
        app:layout_constraintTop_toBottomOf="@+id/textViewf2_6"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf2_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_form2_6"
        app:layout_constraintBottom_toTopOf="@+id/Lt6"
        app:layout_constraintTop_toBottomOf="@+id/textViewf2_7"
        app:layout_constraintVertical_bias="0.045"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>