<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <LinearLayout
        android:id="@+id/Lt7"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="#0C4270"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/unipi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lt8"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_alignParentBottom="true"
        android:background="#0C4270"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/BtnF3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0C4270"
            android:onClick="GoBack4"
            android:text="@string/text_btnF1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewf3_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_form3_1"
        app:layout_constraintBottom_toTopOf="@+id/Lt8"
        app:layout_constraintTop_toBottomOf="@+id/Lt7"
        app:layout_constraintVertical_bias="0.033"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf3_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_form3_2"
        app:layout_constraintTop_toBottomOf="@+id/textViewf3_2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf3_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_form3_3"
        app:layout_constraintTop_toBottomOf="@+id/textViewf3_3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf3_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_form3_4"
        app:layout_constraintTop_toBottomOf="@+id/textViewf3_4"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewf3_6"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_form3_5"
        app:layout_constraintBottom_toTopOf="@+id/Lt8"
        app:layout_constraintTop_toBottomOf="@+id/textViewf3_5"
        app:layout_constraintVertical_bias="0.09"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>