<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/Lt3"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="#0C4270"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/unipi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lt4"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_alignParentBottom="true"
        android:background="#0C4270"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/BtnF1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0C4270"
            android:onClick="GoBack2"
            android:text="@string/text_btnF1" />
    </LinearLayout>

    <TextView
        android:id="@+id/Text_View_2"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_form1_2"
        app:layout_constraintTop_toBottomOf="@+id/Text_View_11"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Text_View_3"
        android:layout_width="0dp"
        android:layout_height="132dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_form1_3"
        app:layout_constraintBottom_toTopOf="@+id/Lt4"
        app:layout_constraintTop_toBottomOf="@+id/Text_View_2"
        app:layout_constraintVertical_bias="0.15"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Text_View_11"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_form1_1"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lt3"
        app:layout_constraintVertical_bias="0.042" />

</androidx.constraintlayout.widget.ConstraintLayout>